--- a/Main/index.html
+++ b/Main/index.html
@@ -30,6 +30,8 @@
     </div>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
